--- a/src/component/pagination/main.scss
+++ b/src/component/pagination/main.scss
@@ -17,6 +17,8 @@
 @import 'style/module';
 @import 'style/scheme';
 @import 'style/contrast';
+@import 'style/contrast-scheme';
 
 @include _pagination-scheme;
 @include _pagination-contrast;
+@include _pagination-contrast-scheme();
