--- a/src/component/pagination/style/_contrast.scss
+++ b/src/component/pagination/style/_contrast.scss
@@ -3,21 +3,16 @@
 /// @group pagination
 ////
 
-@use 'module/color';
 @use 'module/media-query';
 
-@mixin _pagination-contrast($legacy: false) {
-  @include media-query.high-contrast() {
-    #{ns(pagination)} {
-      &__link {
-        &[aria-current] {
-          @if (not $legacy) {
-            justify-content: center;
-            @include padding(calc(1v - 1px) calc(3v - 1px));
-          }
-          @include color.border(active blue-france, (legacy: $legacy, hover: true));
-        }
+@include media-query.high-contrast() {
+  #{ns(pagination)} {
+    &__link {
+      &[aria-current] {
+        justify-content: center;
+        @include padding(calc(1v - 1px) calc(3v - 1px));
       }
     }
   }
 }
+
